--- a/style.css
+++ b/style.css
@@ -1,18 +1,14 @@
-html{
-  height: 100%;
-  width: 100%;
-}
+
 .container{
     display: flex;
     justify-content: center;
-   align-items: center;
+    align-items: end;
    
 }
 .box{
   width: 350px;
   height: auto;
-  border: 25px solid #121e8d;
-  border-radius: 20px;
+  border-radius: 50%;
   padding-bottom: 10px;
   margin-left: 42%;
   margin-top: 10%;
@@ -26,11 +22,9 @@ p{
   font-style: normal;
   margin-bottom: -10px;
 }
-.container-fluid{
-  width: 100%;
-}
+
  body{
-   background-image: linear-gradient( to bottom right, #ee68dc, #8047d7, #4a81d9, #57b4cb);
+   background: #2b2929;
    width: 100vw;
    height: 100vh;
    
@@ -40,26 +34,27 @@ p{
   
 }
 .colum1 input { 
+  color:#2a2a2a;
+  background-color: #474242 ;
   font-size: 1.2rem;
    width: 60px;
    height: 60px;
+   margin-bottom: 1rem;
   text-align: center;
   cursor: pointer;
-  box-shadow: 3px 3px 3px 3px black;
-  border-radius: 20%;
+  border-radius: 50%;
   margin-left: 1rem;
 }
 .colum1 input:hover{
-  color: rgb(223, 17, 17);
-  background-color: #400abe;
+  color: rgb(22, 22, 21);
+  background-color:#bfb5b5;
 }
 .input-box{
   margin-bottom: 15px;
   width: 290px;
   height: 40px;
-  background-color: #fffafa;
-  color: #ee68dc ;
-  border: 5px rgb(179, 21, 21);
+  background-color: #5c5959;
+  color: #272627 ;
   text-align: right;
   font-size: 1.5rem;
 }
@@ -106,10 +101,10 @@ ul li a:hover {
   height: 20px;
 background-color: transparent;
 transition: .3s;
-  border: 1px solid #ccdd15;
+  border: 1px solid #181816;
   border-radius: .5rem;
   background: transparent;
-  color: #ccdd15;
+  color: #171716;
 }
 .d-flex{
   display: flex;
